# oracle-engine

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MODULAR_ARCHITECTURE.md  QUICK_START_EXAMPLES.py  README.md  USAGE_EXAMPLES.md  demo.py  requirements.txt  test_standalone.py
consciousness_circuit/: MODULAR_REFACTORING.md  MODULE_CHECKLIST.md  PKG-INFO  QUICK_REFERENCE.py  README.md  SOURCES.txt  TRAJECTORY_ANALYSIS.md  __init__.py  analysis.py  circuit.py  cli.py  correlation_remapper.py  demo_aggregation.py  demo_full_viz.py  demo_pertoken.py  demo_trajectory.py  demo_universal.py  discover.py  discover_validated.py  entry_points.txt  helios_metrics.py  hooks.py  investigate_architectures.py  logging_config.py  model_adapters.py  patching.py  pyproject.toml  requirements.txt  requires.txt  setup.py  steering.py  tame_metrics.py  test_discovered.py  test_multi_model.py  test_trajectory.py  test_trajectory_standalone.py  test_visualization.py  trajectory_wrapper.py  universal.py  visualization.py
consciousness_circuit/analyzers/: __init__.py  trajectory.py
consciousness_circuit/benchmarks/: __init__.py  profiler.py  test_suites.py
consciousness_circuit/classifiers/: __init__.py  signal_class.py
consciousness_circuit/core/: __init__.py
consciousness_circuit/metrics/: README.md  __init__.py  agency.py  entropy.py  hurst.py  lyapunov.py  msd.py
consciousness_circuit/pipeline/: __init__.py
consciousness_circuit/plugins/: __init__.py  attractor_lock.py  base.py  coherence_boost.py  goal_director.py
consciousness_circuit/training/: __init__.py  preference_generator.py  reward_model.py
huggingface_space/: README.md  app.py  requirements.txt
training/: DATASETS.md  TRAINING_LOG.md  TRAINING_PERFORMANCE.md
