[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consciousness-circuit"
version = "3.0.0"
description = "Measure meta-cognitive signatures in transformer LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VFD-Org", email = "consciousness@example.com"}
]
keywords = [
    "consciousness",
    "LLM",
    "transformers",
    "interpretability",
    "mechanistic",
    "meta-cognition",
    "AI safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "consciousness-circuit[viz,dev]",
]

[project.scripts]
consciousness-measure = "consciousness_circuit.cli:main_measure"
consciousness-discover = "consciousness_circuit.cli:main_discover"
consciousness-validate = "consciousness_circuit.cli:main_validate"
consciousness-trajectory = "consciousness_circuit.cli:main_trajectory"

[project.urls]
Homepage = "https://github.com/VFD-Org/consciousness-circuit"
Documentation = "https://github.com/VFD-Org/consciousness-circuit#readme"
Repository = "https://github.com/VFD-Org/consciousness-circuit"
Issues = "https://github.com/VFD-Org/consciousness-circuit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["consciousness_circuit*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
